# medichain

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: ci.yml
api/: Cargo.toml
api/src/: ipfs.rs  main.rs  nfc_simulator.rs
client/: package-lock.json  package.json
client/doctor-portal/: index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
client/doctor-portal/src/: App.tsx  index.css  main.tsx
client/doctor-portal/src/components/: EmergencyPatientCard.tsx  Layout.tsx  NFCTapSimulator.tsx  index.ts
client/doctor-portal/src/pages/: AccessLogsPage.tsx  DashboardPage.tsx  EmergencyAccessPage.tsx  LabResultsPage.tsx  LoginPage.tsx  PatientDetailPage.tsx  PatientSearchPage.tsx  RegisterPatientPage.tsx  SettingsPage.tsx  index.ts
client/doctor-portal/src/store/: authStore.ts  index.ts  patientStore.ts
client/patient-app/: index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
client/patient-app/src/: App.tsx  index.css
client/patient-app/src/pages/: ConsentManagementPage.tsx  DashboardPage.tsx  EmergencyCardPage.tsx  LoginPage.tsx  MyProfilePage.tsx  MyRecordsPage.tsx  SettingsPage.tsx  index.ts
client/shared/: package-lock.json  package.json  tsconfig.json
client/shared/src/: index.ts
client/shared/src/api/: client.ts  endpoints.ts
client/shared/src/components/: Alert.tsx  Badge.tsx  Button.tsx  Card.tsx  EmergencyBanner.tsx  Input.tsx  Layout.tsx  Loading.tsx  Modal.tsx  PatientCard.tsx  QRCodeDisplay.tsx  index.ts
client/shared/src/hooks/: useApi.ts  useAuth.tsx
client/shared/src/types/: index.ts
client/wasm-crypto/: Cargo.toml  README.md
client/wasm-crypto/src/: hex.rs  lib.rs
crypto/: Cargo.toml
crypto/src/: lib.rs
docs/: PENDING_TASKS.md  api.md  architecture.md  security.md
node/: Cargo.toml
node/src/: main.rs
pallets/access-control/: Cargo.toml
pallets/access-control/src/: lib.rs  mock.rs  tests.rs
pallets/medical-records/: Cargo.toml
pallets/medical-records/src/: lib.rs  mock.rs  tests.rs
pallets/patient-identity/: Cargo.toml
pallets/patient-identity/src/: lib.rs  mock.rs  tests.rs
runtime/: Cargo.toml
runtime/src/: lib.rs  mock.rs  tests.rs
scripts/: deploy.sh  setup.sh  test-all.sh
tests/: e2e_tests.rs  integration_tests.rs
