[workspace]
resolver = "2"
members = [
    "node",
    "pallets/medical-records",
    "pallets/patient-identity",
    "pallets/access-control",
    "runtime",
    "crypto",
    "api"
]

[workspace.dependencies]
# Substrate/Polkadot SDK dependencies - stable versions
frame-support = { version = "38.0.0", default-features = false }
frame-system = { version = "38.0.0", default-features = false }
frame-executive = { version = "38.0.0", default-features = false }
sp-std = { version = "14.0.0", default-features = false }
sp-runtime = { version = "39.0.0", default-features = false }
sp-core = { version = "34.0.0", default-features = false }
sp-io = { version = "38.0.0", default-features = false }
sp-api = { version = "34.0.0", default-features = false }
sp-block-builder = { version = "34.0.0", default-features = false }
sp-transaction-pool = { version = "34.0.0", default-features = false }
sp-inherents = { version = "34.0.0", default-features = false }
parity-scale-codec = { version = "3.6", default-features = false, features = ["derive"] }
scale-info = { version = "2.11", default-features = false, features = ["derive"] }
