[package]
name = "pallet-patient-identity"
version = "0.1.0"
edition = "2021"

[dependencies]
frame-support = { workspace = true }
frame-system = { workspace = true }
sp-std = { workspace = true }
parity-scale-codec = { workspace = true }
scale-info = { workspace = true }
pallet-access-control = { path = "../access-control", default-features = false }

[dev-dependencies]
sp-core = { workspace = true }
sp-runtime = { workspace = true }
sp-io = { workspace = true }

[features]
default = ["std"]
std = [
	"frame-support/std",
	"frame-system/std",
	"sp-std/std",
	"parity-scale-codec/std",
	"scale-info/std",
	"pallet-access-control/std",
]


[lib]
name = "pallet_patient_identity"
path = "src/lib.rs"
crate-type = ["lib"]
